# pdist

./: custom_opp_hce_aarch64.run  pdist.json
PdistOp/build_out/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt
PdistOp/build_out/autogen/: aclnn_pdist.cpp  aclnn_pdist.h  aic-ascend910b-ops-info.ini
PdistOp/build_out/framework/: Makefile  cmake_install.cmake
PdistOp/build_out/framework/tf_plugin/: Makefile  cmake_install.cmake
PdistOp/build_out/op_host/: Makefile  cmake_install.cmake
PdistOp/build_out/op_kernel/: Makefile  cmake_install.cmake
PdistOp/build_out/op_kernel/binary/ascend910b/pdist/: Pdist_16996420756afb19140baf25c1330ba0.json  Pdist_bc0ddcf31cab9c23dc21a02108acf75a.json
PdistOp/build_out/op_kernel/binary/config/ascend910b/: pdist.json
PdistOp/build_out/op_kernel/binary/dynamic/: pdist.py
PdistOp/build_out/op_kernel/tbe/op_info_cfg/ai_core/ascend910b/: aic-ascend910b-ops-info.json
PdistOp/op_host/: pdist.cpp  pdist_tiling.h
PdistOp/op_kernel/: CMakeLists.txt  pdist.cpp
TestPdist/: CMakeLists.txt  main.cpp  run_benchmark.py
